fix: source file changed

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@
     <title>notepad</title>
   </head>
   <body>
-    <img class="background-image" src="../assets/img/undraw_lightbulb_moment_evxr.svg" alt="background-image" >
+    <img class="background-image" src="./assets/img/undraw_lightbulb_moment_evxr.svg" alt="background-image" >
     <main class="main">
       <header class="header">
         <h1 class="header__main">
