--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,17 +13,17 @@
         <h1 class="header__main">
           notepad
           <img
-            src="/src/assets/icons/outline-edit-24px.png"
+            src="../assets/icons/outline-edit-24px.png"
             alt="pencil_icon"
           />
         </h1>
         <button class="header__isDark header__isDark--js">
           <img
-            src="/src/assets/img/light_mode_black_18dp.svg"
+            src="../assets/img/light_mode_black_18dp.svg"
             alt="light_mode_icon"
           />
           <img
-            src="/src/assets/img/dark_mode_black_18dp.svg"
+            src="../assets/img/dark_mode_black_18dp.svg"
             alt="dark_mode_icon"
           />
         </button>
