fix: cover & sources updates

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,23 +7,23 @@
     <title>notepad</title>
   </head>
   <body>
-    <img class="background-image" src="../assets/img/undraw_lightbulb_moment_evxr.svg" alt="background-image" >
+    <img class="background-image" src="../assets/img/bulb.svg" alt="background-image" >
     <main class="main">
       <header class="header">
         <h1 class="header__main">
           notepad
           <img
-            src="../assets/icons/outline-edit-24px.png"
+            src="../assets/icons/pencil.png"
             alt="pencil_icon"
           />
         </h1>
         <button class="header__isDark header__isDark--js">
           <img
-            src="../assets/img/light_mode_black_18dp.svg"
+            src="../assets/img/light.svg"
             alt="light_mode_icon"
           />
           <img
-            src="../assets/img/dark_mode_black_18dp.svg"
+            src="../assets/img/dark.svg"
             alt="dark_mode_icon"
           />
         </button>
