--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,25 +7,21 @@
     <title>notepad</title>
   </head>
   <body>
-    <img class="background-image" src="../assets/img/bulb.svg" alt="background-image" >
+    <img
+      class="background-image"
+      src="../assets/img/bulb.svg"
+      alt="background-image"
+    />
     <main class="main">
       <header class="header">
         <h1 class="header__main">
           notepad
-          <img
-            src="../assets/icons/pencil.png"
-            alt="pencil_icon"
-          />
+          <img src="../assets/icons/pencil.png" alt="pencil_icon" />
         </h1>
         <button class="header__isDark header__isDark--js">
-          <img
-            src="../assets/img/light.svg"
-            alt="light_mode_icon"
-          />
-          <img
-            src="../assets/img/dark.svg"
-            alt="dark_mode_icon"
-          />
+          <img src="../assets/img/light.svg" alt="light_mode_icon" />
+          /
+          <img src="../assets/img/dark.svg" alt="dark_mode_icon" />
         </button>
       </header>
 
@@ -33,13 +29,15 @@
         <textarea
           aria-label="Enter your notes"
           placeholder="Perfect place for your notes.."
-          class="form__text"></textarea>
+          class="form__text"
+        ></textarea>
       </form>
 
       <footer class="footer">
-          <div class="footer__buttons">
-            <button class="button">Load</button>
-            <button class="button">Save</button></div>
+        <div class="footer__buttons">
+          <button class="button button-load--js">Load</button>
+          <button class="button button-save--js">Save</button>
+        </div>
       </footer>
     </main>
   </body>
