--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,6 +12,7 @@
       src="../assets/img/bulb.svg"
       alt="background-image"
     />
+
     <main class="main">
       <header class="header">
         <h1 class="header__main">
@@ -29,14 +30,14 @@
         <textarea
           aria-label="Enter your notes"
           placeholder="Perfect place for your notes.."
-          class="form__text"
+          class="form__text form__text--js"
         ></textarea>
       </form>
 
       <footer class="footer">
         <div class="footer__buttons">
-          <button class="button button-load--js">Load</button>
-          <button class="button button-save--js">Save</button>
+          <button class="button load--js">Load</button>
+          <button class="button button--save save--js">Save</button>
         </div>
       </footer>
     </main>
