fix: url in meta update

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,11 +14,11 @@
     <meta property="og:url" content="https://kos-tomasz.github.io/notepad/" />
     <meta
       property="og:image"
-      content="https://kos-tomasz.github.io/notepad/public/notepad.png"
+      content="https://raw.githubusercontent.com/kos-tomasz/notepad/master/src/assets/img/notepad.png"
     />
-    <meta property="og:image:type" content="image/png" />
+    <!-- <meta property="og:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image:height" content="630" /> -->
 
     <!-- uncomment the line below to enable PWA  -->
     <link rel="manifest" href="manifest.json" />
