--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>notepad</title>
+    <meta name="description" content="Simple notepad which uses local storage to load your last saved note."/>
 
     <meta property="og:title" content="notepad" />
     <meta
@@ -16,9 +17,6 @@
       property="og:image"
       content="https://raw.githubusercontent.com/kos-tomasz/notepad/master/src/assets/img/notepad.png"
     />
-    <!-- <meta property="og:type" content="image/png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" /> -->
 
     <!-- uncomment the line below to enable PWA  -->
     <link rel="manifest" href="manifest.json" />
